--- a/weather-app/weather-2/package.json
+++ b/weather-app/weather-2/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "chart.js": "^2.6.0",
     "react": "^15.6.1",
+    "react-chartjs-2": "^2.5.6",
     "react-dom": "^15.6.1",
     "react-router": "^3.0.2",
     "react-scripts": "1.0.10"
